Code cleanup and randomized colors for each reminder

--- a/client/main.less
+++ b/client/main.less
@@ -18,3 +18,11 @@ a.checked {
   color: #888;
   text-decoration: line-through;
 }
+
+.colorbox {
+  float: left;
+  width: 15px;
+  height: 15px;
+  margin-top: 15px;
+  border: 1px solid rgba(0, 0, 0, .2);
+}
